
05/06/2023:
	- Updated SPECTRA.cc to use stack names


31/05/2023:
	- Updated IIIF to default to version 3 of the Image API


27/05/2023:
	- Refactored codec class constructors to call base class constructor with member initialization list.
	- Fixed number of compiler and Coverity warnings.


22/05/2023:
	- Added ability to handle CORS preflight requests using the HTTP OPTIONS method


17/05/2023:
	- Changed the IIIF scaleFactors variable in info.json to calculate the real scale between levels and not
	  just assume powers of 2.
	- TPTImage now skips non-tiled IFDs: this enables compatibility with formats such as Aperio SVS and others
	  that include non-resolution images such as thumbnails within the IFD sequence.


20/04/2023:
	- CVT now uses same header create function as all other commands, thereby adding missing CORS headers
	  (Fixes: https://github.com/ruven/iipsrv/issues/256). Also removed obsolete chunking code from CVT.cc
	  (chunking no longer supported in HTTP/2).
	- Changed Content-Disposition file name to add size information and allow browser download via "attachment"
	  type when a POST request is received.


06/04/2023:
	- Added ability to serve DPI information through metadata retrieval via OBJ class and through physical dimensions
	  service for IIIF info.json


28/03/2023:
	- Added support for pyramid resolutions stored within SubIFDs for TIFF images. This allows for support for image
	  stacks or sequences consisting of different images stored as a single multi-page TIFF. Each image has it's own
	  set of pyramid resolutions and each image within the stack can be accessed using the existing IIP SDS command.
	  for example SDS=3 for the 4th image in the stack. Enables support for pyramid OME-TIFF whole-slide microscopy
	  image stacks. Also added OBJ=stack command to get the list of stack images and scale in JSON.


23/03/2023:
	- Make sure the PNG filter type is always initialized: code moved from setQuality() to class constructor

