@@ -1,6 +1,6 @@
 /*  JPEG class wrapper to ijg jpeg library
 
-    Copyright (C) 2000-2022 Ruven Pillay.
+    Copyright (C) 2000-2023 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -242,7 +242,8 @@ void JPEGCompressor::InitCompression( const RawTile& rawtile, unsigned int strip
   jpeg_start_compress( &cinfo, TRUE );
 
   // Add an identifying comment
-  jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) "Generated by IIPImage", 21 );
+  const char *comment = "iipsrv/" VERSION;
+  jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) comment, strlen(comment) );
 
   // Embed ICC profile if one is supplied
   writeICCProfile();
@@ -415,7 +416,8 @@ unsigned int JPEGCompressor::Compress( RawTile& rawtile )
   jpeg_start_compress( &cinfo, TRUE );
   
   // Add an identifying comment
-  jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) "Generated by IIPImage", 21 );
+  const char *comment = "iipsrv/" VERSION;
+  jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) comment, strlen(comment) );
 
   // Embed ICC profile if one is supplied
   writeICCProfile();
