@@ -1,3 +1,6 @@
+19/06/2023:
+	- Harmonized iipsrv identity string between JPEG and PNG.
+
 
 05/06/2023:
 	- Updated SPECTRA.cc to use stack names
